// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaWidget simple with errors 1`] = `
<div
  className="control"
>
  <textarea
    autoFocus={true}
    className="textarea is-danger"
    disabled={false}
    id="_id"
    name="_id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    readOnly={true}
    required={true}
    rows={5}
    value="value"
  />
</div>
`;

exports[`TextareaWidget simple without errors 1`] = `
<div
  className="control"
>
  <textarea
    autoFocus={true}
    className="textarea is-danger"
    disabled={false}
    id="_id"
    name="_id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    readOnly={true}
    required={true}
    rows={5}
    value="value"
  />
</div>
`;

exports[`TextareaWidget simple without required 1`] = `
<div
  className="control"
>
  <textarea
    autoFocus={true}
    className="textarea is-danger"
    disabled={false}
    id="_id"
    name="_id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    readOnly={true}
    required={false}
    rows={5}
    value="value"
  />
</div>
`;
